--- a/css/style.css
+++ b/css/style.css
@@ -97,24 +97,28 @@ a {
 .btn {
   font-size: 16px;
   font-weight: 500;
+  text-align: center;
   color: #ffffff;
+  vertical-align: middle;
   text-transform: uppercase; 
+
+  border: none;
 }
 
-.btn a:active {
-  color: rgba(255, 255, 255, 0.03);
+.btn:active {
+  color: rgba(255, 255, 255, 0.3);
 }
 
 .btn-web {
   background-color: #fb565a;
 }
 
-.btn-web a:hover,
-.btn-web a:focus {
+.btn-web:hover,
+.btn-web:focus {
   background-color: #e74246; 
 }
 
-.btn-web a:active {
+.btn-web:active {
   background-color: #d7373b;
 }
 
@@ -122,12 +126,12 @@ a {
   background-color: #00ca74;
 }
 
-.btn-app a:hover,
-.btn-app a:focus {
+.btn-app:hover,
+.btn-app:focus {
   background-color: #00bc6c; 
 }
 
-.btn-app a:active {
+.btn-app:active {
   background-color: #00aa62;
 }
 
@@ -135,12 +139,12 @@ a {
   background-color: #efc84a;
 }
 
-.btn-presentation a:hover,
-.btn-presentation a:focus {
+.btn-presentation:hover,
+.btn-presentation:focus {
   background-color: #eab534;  
 }
 
-.btn-presentation a:active {
+.btn-presentation:active {
   background-color: #e5a722;
 }
 
